crates/palimpsest-permissions/tests/snapshots/snapshots__rewrite_elides_tautology.snap
---
source: crates/palimpsest-permissions/tests/snapshots.rs
expression: "render(&rules, \"SELECT id FROM posts\", &alice())"
---
rules:
  - name=everything table=posts mode=Both predicate=true
  - name=posts_owner table=posts mode=Both predicate=author_id = $user.id

query:
  SELECT id FROM posts

canonical_before:
  project:id[input:base:posts:[][]]

canonical_after:
  project:id[input:base:posts:[][]]

stats: RewriteStats { base_tables_visited: 1, filters_inserted: 0, rules_elided: 1 }
