crates/palimpsest-permissions/tests/snapshots/snapshots__rewrite_join_filters_each_basetable.snap
---
source: crates/palimpsest-permissions/tests/snapshots.rs
expression: "render(&rules,\n\"SELECT posts.id\n             FROM posts JOIN authors ON posts.author_id = authors.id\",\n&alice(),)"
---
rules:
  - name=posts_owner table=posts mode=Both predicate=author_id = $user.id
  - name=authors_self table=authors mode=Both predicate=id = $user.id

query:
  SELECT posts.id
             FROM posts JOIN authors ON posts.author_id = authors.id

canonical_before:
  project:posts.id[input000:join:Inner:[(ColumnRef { relation: Some("posts"), name: "author_id" }, ColumnRef { relation: Some("authors"), name: "id" })][input000:base:posts:[][],input001:base:authors:[][]]]

canonical_after:
  project:posts.id[input000:join:Inner:[(ColumnRef { relation: Some("posts"), name: "author_id" }, ColumnRef { relation: Some("authors"), name: "id" })][input000:filter:author_id = 42[input000:base:posts:[][]],input001:filter:id = 42[input000:base:authors:[][]]]]

stats: RewriteStats { base_tables_visited: 2, filters_inserted: 2, rules_elided: 0 }
