crates/palimpsest-permissions/tests/snapshots/snapshots__rewrite_single_table_filter.snap
---
source: crates/palimpsest-permissions/tests/snapshots.rs
expression: "render(&rules, \"SELECT id FROM posts\", &alice())"
---
rules:
  - name=posts_owner table=posts mode=Both predicate=author_id = $user.id

query:
  SELECT id FROM posts

canonical_before:
  project:id[input000:base:posts:[][]]

canonical_after:
  project:id[input000:filter:author_id = 42[input000:base:posts:[][]]]

stats: RewriteStats { base_tables_visited: 1, filters_inserted: 1, rules_elided: 0 }
