crates/palimpsest-permissions/tests/snapshots/snapshots__rewrite_skips_subscribe_only_rule.snap
---
source: crates/palimpsest-permissions/tests/snapshots.rs
expression: "render(&rules, \"SELECT id FROM posts\", &alice())"
---
rules:
  - name=p table=posts mode=Subscribe predicate=author_id = $user.id

query:
  SELECT id FROM posts

canonical_before:
  project:id[input000:base:posts:[][]]

canonical_after:
  project:id[input000:base:posts:[][]]

stats: RewriteStats { base_tables_visited: 1, filters_inserted: 0, rules_elided: 1 }
